@@ -1,3 +1,8 @@
+2007-01-21  Andrew John Hughes  <gnu_andrew@member.fsf.org>
+
+	* javax/management/NotificationBroadcasterSupport.java:
+	New file.
+	
 2007-01-20  Ito Kazumitsu  <kaz@maczuka.gcd.org>
 
 	* java/text/DecimalFormat.java(parse): Corrected the ParsePosition
